--- a/git.html
+++ b/git.html
@@ -12,6 +12,7 @@
 
     <h1 class="some-heading">GIT WORKFLOW WORKSHOW</h1>
     <p>Är det nån konflikt?</p>
+    <h3>Allt bra här</h3>
 </body>
 
 </html>
